changes index page

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
               <div class="card card-plain mt-5">
                 <div class="card-header pb-0 text-left bg-transparent">
                   <h3 class="font-weight-bolder text-info text-gradient">Professional Web Design SERVICES</h3>
-                  <p class="mb-0">Enter your email and password to sign in</p>
+                  <p class="mb-0">We build websites that increase business.</p>
+                  <p class="mb-0"><b>Devine Tech </b>Design builds contemporary, mobile-friendly websites for businesses that are designed to sell goods and services.</p>
                 </div>
               
               
@@ -117,7 +118,164 @@
         </div>
       </div>
     </section>
+
+<section class="container mt-md-5">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card card-plain card-blog mt-4">
+        <div class="card-image border-radius-lg position-relative">
+          <a href="javascript:;">
+            <div class="blur-shadow-image">
+              <img class="img border-radius-lg move-on-hover" src="./assets/img/kit/pro/anastasia.jpg">
+            </div>
+          </a>
+        </div>
+        <div class="card-body px-0">
+          <h5>
+            <a href="javascript:;" class="text-dark font-weight-bold">Rover raised $65 million for pet sitting</a>
+          </h5>
+          <p>
+            Finding temporary housing for your dog should be as easy as
+            renting an Airbnb. That’s the idea behind Rover ...
+          </p>
+          <a href="javascript:;" class="text-info icon-move-right">Read More
+            <i class="fas fa-arrow-right text-sm" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header p-0 mx-3 mt-3 position-relative z-index-1">
+          <a href="javascript:;" class="d-block blur-shadow-image">
+            <img src="./assets/img/kit/pro/anastasia.jpg" class="img-fluid border-radius-lg">
+          </a>
+        </div>
+  
+        <div class="card-body">
+          <div class="w-50 mx-auto">
+            <img src="./assets/img/kit/pro/anastasia.jpg" alt="" class="img-fluid">
+          </div>
+          <p class="card-description mb-5 mt-3">
+            "Use border utilities to quickly style the border and border-radius of an element. Great for images, buttons."
+          </p>
+          <div class="pull-left">
+            <span>―</span>
+            Collin Marcus
+          </div>
+          <a href="javascript:;" class="text-success icon-move-right pull-right">Read More
+            <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  
+    <div class="col-md-4">
+      <div class="card card-profile card-plain">
+        <div class="card-body text-center bg-white shadow border-radius-lg p-3">
+          <a href="javascript:;">
+            <img class="w-100 border-radius-md" src="./assets/img/kit/pro/anastasia.jpg">
+          </a>
+          <h5 class="mt-3 mb-1 d-md-block d-none">Natalie Paisley</h5>
+          <p class="mb-1 d-md-none d-block text-sm font-weight-bold text-darker">Natalie Paisley</p>
+          <p class="mb-0 text-xs font-weight-bolder text-warning text-gradient text-uppercase">Credit Analyst</p>
+        </div>
+      </div>
+    </div>
+  
+    <div class="col-md-4 mt-4">
+      <div class="card card-profile mt-md-0 mt-5">
+        <a href="javascript:;">
+          <div class="p-3">
+            <img class="w-100 border-radius-md" src="./assets/img/kit/pro/anastasia.jpg">
+          </div>
+        </a>
+        <div class="card-body blur justify-content-center text-center mx-4 mb-4 border-radius-md">
+          <h4 class="mb-0">Bruce Mars</h4>
+          <p>Atlanta, U.S.</p>
+          <div class="row justify-content-center text-center">
+            <div class="col-12 mx-auto">
+              <h5 class="text-info mb-0">750</h5>
+              <small>Projects</small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <div class="col-md-4 mt-4">
+      <div class="card card-blog card-plain">
+        <div class="position-relative">
+          <a class="d-block blur-shadow-image">
+            <img src="./assets/img/kit/pro/anastasia.jpg" alt="img-blur-shadow" class="img-fluid shadow border-radius-lg">
+          </a>
+        </div>
+        <div class="card-body px-1 pt-3">
+          <p class="text-gradient text-primary mb-2 text-sm">Entire Apartment • 2 Guests • 1 Bed</p>
+          <a href="javascript:;">
+            <h5>
+              Cozy Double Room Near Station
+            </h5>
+          </a>
+          <p>
+            Different people have different taste, and various types of music have many ways of leaving an impact on someone.
+          </p>
+          <button type="button" class="btn btn-outline-primary btn-sm">From / Night</button>
+        </div>
+      </div>
+    </div>
+  
+    <div class="col-md-8 mt-4">
+      <div class="card">
+        <img class="card-img-top" src="./assets/img/kit/pro/anastasia.jpg">
+        <div class="position-relative" style="height: 50px;overflow: hidden;margin-top: -50px;z-index:2;position: relative;">
+          <div class="position-absolute w-100 top-0" style="z-index: 1;">
+              <svg class="waves waves-sm" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 40" preserveAspectRatio="none" shape-rendering="auto">
+                <defs>
+                  <path id="card-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
+                </defs>
+                <g class="moving-waves">
+                  <use xlink:href="#card-wave" x="48" y="-1" fill="rgba(255,255,255,0.30"></use>
+                  <use xlink:href="#card-wave" x="48" y="3" fill="rgba(255,255,255,0.35)"></use>
+                  <use xlink:href="#card-wave" x="48" y="5" fill="rgba(255,255,255,0.25)"></use>
+                  <use xlink:href="#card-wave" x="48" y="8" fill="rgba(255,255,255,0.20)"></use>
+                  <use xlink:href="#card-wave" x="48" y="13" fill="rgba(255,255,255,0.15)"></use>
+                  <use xlink:href="#card-wave" x="48" y="16" fill="rgba(255,255,255,0.99)"></use>
+                </g>
+              </svg>
+            </div>
+        </div>
+        <div class="card-body">
+          <h4>
+            Soft UI Design System
+          </h4>
+          <p>
+            One of the most beautiful and complex UI Kits built by the team behind Creative Tim. That's pretty impressive.
+          </p>
+          <a href="javascript:;" class="text-primary icon-move-right">More about us
+            <i class="fas fa-arrow-right text-xs ms-1" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  
+  </div>
+
+</section>
+
+
+
+
+
   </main>
+
+
+
+
+
+
+
   <!-- -------- START FOOTER 3 w/ COMPANY DESCRIPTION WITH LINKS & SOCIAL ICONS & COPYRIGHT ------- -->
   <footer class="footer py-5">
     <div class="container">
