--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <div class="col-md-6 mt-md-5">
     <h3>
       <a href="javascript:;" class="font-weight-bolder text-info text-gradient ">About</a> </h3>
-      <p>Greetings from <B>Devine Tech.</B> Our enthusiasm for website design is contagious! You will sense our enthusiasm and vigour as we work to make your project unique. Because we want to, we go above and above. Devine Tech works hard to surpass your expectations and satiate our thirst for improvement. We are reachable via phone, email, and skype every day of the week, except on Sundays, and we have a number of references you can call. With our reasonable rates and no up-front costs, we are known for successfully completing projects. You only pay for work that meets your complete satisfaction.</p>
+      <p class="text-justify">Greetings from <B>Devine Tech.</B> Our enthusiasm for website design is contagious! You will sense our enthusiasm and vigour as we work to make your project unique. Because we want to, we go above and above. Devine Tech works hard to surpass your expectations and satiate our thirst for improvement. We are reachable via phone, email, and skype every day of the week, except on Sundays, and we have a number of references you can call. With our reasonable rates and no up-front costs, we are known for successfully completing projects. You only pay for work that meets your complete satisfaction.</p>
    
   </div>
 
